CCompiler/Parser/ExpressionParsers.cs
using System.Collections.Generic;
using System.Linq;
using CCompiler.Tokenizer;

namespace CCompiler.Parser
{
    public partial class SyntaxParser
    {
        /*
         * const : int_const +
			| char_const +
			| float_const +
			| enumeration_const
         */

        private IParseResult ParseConst()
        {
            if (Accept(TokenType.INT) || Accept(TokenType.CHAR) || Accept(TokenType.FLOAT))
                return new SuccessParseResult(new Const(_acceptedToken));

            return new FailedParseResult("expected expression", _currentToken);
        }

        /*
         *  identifier : id
             ;
         */
        
        private IParseResult ParseId()
        {
            if (Accept(TokenType.IDENTIFIER))
                return new SuccessParseResult(new Id((string)_acceptedToken.Value));
            
            return new SuccessParseResult(new NullStat());
        }
        
        /*
         * primary_exp : identifier +
			| const +
			| string +
			| '(' exp ')'
         */

        private IParseResult ParsePrimaryExp()
        {
            if (AcceptOp(OperatorType.LRBRACKET))
            {
                var exp = ParseExp();
                if (!exp.IsSuccess)
                    return exp;
                ExceptOp(OperatorType.RRBRACKET);
                return exp;
            }
            
            var id = ParseId();
            if (!id.IsNullStat())
                return id;

            if (Accept(TokenType.STRING))
                return new SuccessParseResult(new String((string)_acceptedToken.Value));

            var @const = ParseConst();
            return @const;
        }

        /*
         * postfix_exp : primary_exp +
        	| postfix_exp '[' exp ']'
        	| postfix_exp '(' argument_exp_list ')'
        	| postfix_exp '(' ')' +
        	| postfix_exp '.' id +
        	| postfix_exp '->' id +
        	| postfix_exp '++' +
        	| postfix_exp '--' +
         */

        private IParseResult ParsePostfixExp()
        {
            var result = ParsePrimaryExp();
            if (!result.IsSuccess)
                return result;

            while (true)
            {
                if (AcceptOp(OperatorType.LSBRACKET))
                {
                    var exp = ParseExp();
                    if (!exp.IsSuccess)
                        return exp;
                    ExceptOp(OperatorType.RSBRACKET);
                    result = new SuccessParseResult(new AccessingArrayElement(result.ResultNode, exp.ResultNode));
                    continue;
                }

                if (AcceptOp(OperatorType.LRBRACKET))
                {
                    if (AcceptOp(OperatorType.RRBRACKET))
                    {
                        result = new SuccessParseResult(new FuncCall(result.ResultNode, new NullStat()));
                        continue;
                    }

                    var exp = ParseExp();
                    if (!exp.IsSuccess)
                        return exp;
                    ExceptOp(OperatorType.RRBRACKET);
                    result = new SuccessParseResult(new FuncCall(result.ResultNode, exp.ResultNode));
                    continue;
                }

                if (AcceptOp(OperatorType.DOT) || AcceptOp(OperatorType.RARROW))
                {
                    var op = _acceptedToken as OperatorToken;
                    var id = ParseId();
                    if (id.IsNullStat())
                        return new FailedParseResult("expected identifier", _currentToken);

                    result = new SuccessParseResult(
                        new MemberCall(result.ResultNode, id.ResultNode,
                            (op.Type == OperatorType.DOT ? MemberCall.CallType.VALUE : MemberCall.CallType.POINTER)));
                    continue;
                }
